Fix for Grid on mobile view. Update TextArea Readme. Add TextEditor README. Add TextEditor tests.

--- a/components/TextEditor/TextEditor.css
+++ b/components/TextEditor/TextEditor.css
@@ -56,7 +56,7 @@
     border-radius: 8px;
     border: 2px solid #efefef;
     /* flex-wrap: nowrap; */
-    width: 700px;
+    max-width: 700px;
 }
 
 .draggable {
@@ -78,7 +78,7 @@
     height: 220px;
 }
 
-@media (--xSmall){
+/* @media (--xSmall){
 
     :global(.mooskin-textarea-editor .rdw-colorpicker-modal){
         position: fixed;
@@ -110,14 +110,11 @@
         left: 20%;
     }
 
-}
+} */
 
 
 @media (--deviceXsmall){
     .toolbar{
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
+        top: -170px;
     }
 }
